# whisper-stream

./: .condarc  .dockerignore  .editorignore  .gitignore  .mambarc  .pre-commit-config.yaml  Dockerfile  README.md  WhisperJax.md  conda.yml  environment_base.yml  environment_full.yml  poetry.toml  pyproject.toml  requirements.all.projects.txt  requirements.all.txt  requirements.core.faster_whisper_api.txt  requirements.core.jax_pipelines.txt  requirements.service_jax.txt  requirements.testing.txt
.github/workflows/: Release.yml  publish-release-and-docker.yml
SageMaker/: .dockerignore  Dockerfile.SageMaker  Readme.md  buildspec-jax-cu11.yml  conda.yml
benchmarks/: run_pjit.py  run_pjit_dataloader.py  run_pmap.py
development/docker/jupyterhub/: .dockerignore  Dockerfile.jupyterhub
development/docker/sagemaker/: .dockerignore  Dockerfile.sagemaker  SSH_IDE.ipynb  buildspec.yml  environment_full.yml  requirements.txt
development/notebooks/: usage-jax-whisper-streaming.ipynb  usage-whisper-jax.ipynb  whisper-jax-tpu.ipynb
docs/: ServiceJax.md  WhisperJax.md
experiments/: environment_full.yml
experiments/kernl/: speedup.ipynb
experiments/unifyai/: torch_to_jax.ipynb
faster-whisper-api/: .dockerignore  README.md  docker-compose.yml  poetry.toml  pyproject.toml
faster-whisper-api/faster_whisper_api/: app.py  container.py  launcher.py  logger.py
faster-whisper-api/faster_whisper_api/config/: faster_whisper_api_launch_config.py  faster_whisper_model_config.py  faster_whisper_transcription_config.py
faster-whisper-api/faster_whisper_api/di/: common.py  faster_whisper_model.py
faster-whisper-api/faster_whisper_api/endpoints/: __init__.py  probes.py  transcribe.py
faster-whisper-api/faster_whisper_api/preload/: faster_whisper_model.py
faster-whisper-api/faster_whisper_api/schemas/: exceptions.py  responses.py
notebooks/: Bench.ipynb  ruff.toml  usage-jax-whisper-streaming.ipynb  usage-whisper-jax.ipynb  usage.ipynb  whisper-jax-tpu.ipynb
projects/faster-whisper-api/: .test.env  Dockerfile  README.md  docker-compose.yml  log_config.yaml  pyproject.toml  requirements.txt
projects/jax-pipelines/: NOTICE.md  README.md  poetry.toml  pyproject.toml  requirements.txt
sagemaker/: .dockerignore  Dockerfile.SageMaker  Dockerfile.sagemaker  Readme.md  buildspec.yml  environment_full.yml  requirements.txt
sagemaker/scripts/: ssm.ssh
tests/: __init__.py  faster-whisper-api.conf  requirements.test.faster_whisper_api.txt
tests/faster_whisper_api/: locustfile.py  problem.py
whisper_stream/: __init__.py  constants.py  logger.py  pipeline.py
whisper_stream/core/: README.md  __init__.py  constants.py  logger.py  typings.py
whisper_stream/core/helpers/: batching.py  data_loading.py  parallel.py  parsing.py  preprocessing.py  s3_utils.py
whisper_stream/core/utils/: s3_utils.py
whisper_stream/data/: prefetch.py
whisper_stream/pipelines/: __init__.py  factory.py  jax.py  jax_pipeline.py  pipelines_jax.py
whisper_stream/pipelines/jax_pipelines/: __init__.py  constants.py  streaming.py
whisper_stream/projects/faster_whisper_api/: __main__.py  app.py  launcher.py  logger.py
whisper_stream/projects/faster_whisper_api/config/: base.py  faster_whisper_api_launch_config.py  faster_whisper_model_config.py  faster_whisper_transcription_config.py
whisper_stream/projects/faster_whisper_api/di/: common.py  faster_whisper_model.py
whisper_stream/projects/faster_whisper_api/endpoints/: __init__.py  probes.py  transcribe.py
whisper_stream/projects/faster_whisper_api/preload/: faster_whisper_model.py
whisper_stream/projects/faster_whisper_api/schemas/: __init__.py  exceptions.py  responses.py
whisper_stream/projects/jax_pipelines/: __init__.py  constants.py  streaming.py
whisper_stream/utils/: __init__.py  data.py  helpers.py  parallel.py  s3_utils.py
whisper_stream/whisper_jax/: __init__.py  modeling_flax_whisper.py  partitioner.py  pipeline.py
