[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry]
name = "whisper-stream-faster-whisper-api"
version = "0.0.5"
description = "fast-api based serving app for `faster-whisper` models"
readme = "README.md"
license = "Apache License 2.0"
keywords = ["faster-whisper", "api"]
authors = ["krishnakumar <ksquarekumar@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
  { include = "whisper_stream/core", from = "../.." },
  { include = "whisper_stream/projects/faster_whisper_api", from = "../.." },
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
joblib = ">=1.3.2"
pathos = ">=0.3.1"
dill = ">=0.3.7"
structlog = ">=23.1.0"
orjson = ">=3.9.5"
cached_property = ">=1.5.2"
click = ">=8.1.7"
boto3 = ">=1.28.38"
librosa = ">=0.10.1"
soundfile = ">=0.12.1"
# specific to projects/faster_whisper_api
ctranslate2 = { version = ">=3.19.0" }
faster-whisper = { version = ">=0.8.0" }
av = ">=10"
huggingface_hub = ">=0.13"
tokenizers = ">=0.13"
onnxruntime = ">=1.14"
transformers = { version = ">=4.32.1", extras = ["torch"] }
torch = { version = ">=2.0.0", optional = true, python = "^3.11", markers = "extra=='cuda'", source = "torch_cu118" }
llvmlite = ">=0.34.1"
uvloop = "^0.17.0"
uvicorn = { version = ">=0.23.2", extras = ["standard"] }
fastapi = { version = ">=0.103.1", extras = ["all"] }
python-dotenv = "^1.0.0"
pydantic = { version = ">2.0", extras = ["pydantic-settings"] }
pydantic-settings = ">=2.0.3"
dependency-injector = { version = "^4.41.0", extras = ["pydantic"] }

[tool.poetry.group.test.dependencies]
coverage = { version = ">=6.5", extras = ["toml"] }
pytest = ">=7.4.0"

[tool.poetry.scripts]
launch_faster_whisper_api = { reference = "whisper_stream.projects.faster_whisper_api.__main__:main", type = "console" }

[tool.black]
target-version = ["py311"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
extend = "../../pyproject.toml"
